# Revision history for Perl extension Encode.
#
# $Id: Changes,v 2.73 2015/04/15 23:14:01 dankogai Exp dankogai $
#
$Revision: 2.73 $ $Date: 2015/04/15 23:14:01 $
! bin/enc2xs
  Applied patch: #105471: make Encode build with -pedantic
  https://rt.cpan.org/Ticket/Display.html?id=105471
! Byte/Makefile.PL
  CN/Makefile.PL
  EBCDIC/Makefile.PL
  JP/Makefile.PL
  KR/Makefile.PL
  Makefile.PL
  Symbol/Makefile.PL
  TW/Makefile.PL
  Applied patch: #102826: non-deterministic Makefiles
  https://rt.cpan.org/Ticket/Display.html?id=102826

2.73 2015/04/15 23:14:01
! lib/Encode/MIME/Header.pm
  Addressed: RT#104422
     decode('MIME-header') does not properly join similar Q encoded-words
  https://rt.cpan.org/Ticket/Display.html?id=104422

2.73 2015/04/15 23:14:01
! MANIFEST
+ t/isa.t
! Encode.pm
  Addressed RT#103253: Encode::XS does not inherit from Encode::Encoding
  https://rt.cpan.org/Public/Bug/Display.html?id=103253
! encoding.pm
+ t/encoding-locale.t
  Pulled: Rewrite of encoding::_get_locale_encoding for more portability #40
! encoding.pm
  Pulled: encoding.pm: more inlining #39
  https://github.com/dankogai/p5-encode/pull/39

2.72 2015/03/14 02:44:39
! encoding.pm
  Copied from bleadperl to be in sync with it again.
  http://www.nntp.perl.org/group/perl.perl5.porters/2015/03/msg226576.html

2.71 2015/03/12 00:03:52
! encoding.pm
  Pulled: Don't fail 'no encoding' on EBCDIC
  https://github.com/dankogai/p5-encode/pull/38
! lib/Encode/Alias.pm t/Aliases.t
  Add cp65000 => UTF-7 and cp65001 => utf-8-strict
  https://github.com/dankogai/p5-encode/issues/37
! encoding.pm
  Sync w/ bleadperl
  https://github.com/dankogai/p5-encode/pull/36
! bin/encguess
  Pulled: show encguess example per #33
  https://github.com/dankogai/p5-encode/pull/34

2.70 2015/02/05 10:53:00
! Makefile.PL
  add bin/encguess to EXE_FILES

2.69 2015/02/05 10:35:11
! bin/encguess
  Refactored so that
  * does not depend on non-core module (File::Slurp in particular)
  * PODified document